opstart af html og scss

--- a/index.html
+++ b/index.html
@@ -1,13 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Banding.co</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <!--Mobile navigation-->
+            <nav class="mobile-nav">
+                <a class="logo" href="index.html"><img src="img/logo-gron.png" alt=""></a>
+                <i></i>
+            </nav>
+
+            <!--Desktop navigation--> 
+            <nav class="desktop-nav">
+                <ul>
+                    <li><a class="active" href="index.html">Forside</a></li>
+                    <li><a href="#">Om</a></li>
+                    <li><a href="#">Sevices</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!--Bannerbillede med tekst-->
+        <header class="header-img">
+            <img class="bg-billede-desktop" src="img/computer.jpg" alt="">
+            <img class="bg-billede-mobil" src="img/computer-m.jpg" alt="">
+            <div class="banner-tekst">
+                <h1>
+                    Styrk din profesionelle fremtoning<br> og skab et bedre brand
+                </h1>
+                <p>Lad os hjælpe dig med rejsen!</p>
+                <a class="primary-btn" href="#">Kontakt os</a>
+            </div>
+        </header>
+
+        <!--Hovedindhold-->
+        <main>
+            <h2>Hvad skal vi hjælpe dig med?</h2>
+            <section class="cta-wrapper">
+                <div class="cta-1">
+                    <img src="img/branding.png" alt="">
+                    <h3>Branding</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa nam modi debitis incidunt excepturi iste harum accusamus velit consectetur earum!</p>
+                    <a href="#">Læs mere om branding</a>
+                </div>
+
+                <div class="cta-2">
+                    <img src="img/seo.png" alt="">
+                    <h3>SEO</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa nam modi debitis incidunt excepturi iste harum accusamus velit consectetur earum!</p>
+                    <a href="#">Læs mere om SEO</a>
+                </div>
+
+                <div class="cta-3">
+                    <img src="img/internet.png" alt="">
+                    <h3>Hjemmesider</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa nam modi debitis incidunt excepturi iste harum accusamus velit consectetur earum!</p>
+                    <a href="#">Læs om hjemmesider</a>
+                </div>
+
+            </section>
+
+        </main>
+
+    </div> 
 </body>
 </html>
