--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banding.co</title>
-    <link rel="stylesheet" href="scss/style.css">
     <script src="https://kit.fontawesome.com/1f99888007.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="scss/style.css">  
 </head>
 <body>
     <div class="container">
@@ -14,7 +14,7 @@
             <!--Mobile navigation-->
             <nav class="mobile-nav">
                 <a class="logo" href="index.html"><img src="img/logo-gron.png" alt=""></a>
-                <i></i>
+                <i class="navToggle bars fa-solid fa-bars fa-2xl"></i>
             </nav>
 
             <!--Desktop navigation--> 
@@ -65,11 +65,88 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa nam modi debitis incidunt excepturi iste harum accusamus velit consectetur earum!</p>
                     <a href="#">Læs om hjemmesider</a>
                 </div>
+            </section>
+
+    <!--Tekst og billede sektion-->
+            <section class="txt-img-section">
+                <div class="txt">
+                    <h2>Vi går hele vejen med jer</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa fugit harum dolor iste minus fuga id cum totam vero distinctio. Delectus dolor enim quo illum tenetur ullam fugit debitis facilis.</p>
+
+                    <p>Commodi earum hic itaque sequi aliquid ex eaque blanditiis similique quisquam porro, tenetur illo natus nemo iure doloribus dolore nobis repudiandae tempore fuga libero autem est eum. Excepturi, atque possimus.</p>
+
+                    <p>Voluptatem, nesciunt ea! Dignissimos, reiciendis vero? Ea iure sapiente nemo, accusantium dolorem, fugit quas ullam asperiores non libero quaerat? Saepe iure cumque tempore ipsa praesentium minus corporis, aut quidem doloribus.</p>
+
+                    <p>At distinctio labore dignissimos voluptate, debitis esse ut minima doloremque ea neque animi veritatis qui voluptatum illo temporibus suscipit voluptatibus minus sapiente beatae expedita nulla, hic accusamus aliquid delectus.</p> 
+
+                    <a class="secondary-btn" href="#">Læs mere om vores processarbejde</a>
+                </div>
+
+                <div class="billede"></div>
 
             </section>
 
+            <!--Kontaktformular-->
+            <section class="kontakt-bg-img">
+                <form class="kontaktform">
+                    <h4>Kontakt os</h4>
+                    <p>Kontakt os nedenfor hvis du ønsker et uforpligtende tilbud.</p>
+                    
+                   <div class="section-form">
+                        <label class="visually-hidden" for="navn">Navn</label>
+                        <input id="navn" type="text" placeholder="Navn" required>
+
+                        <label class="visually-hidden" for="email">E-mail</label>
+                        <input id="email" type="email" placeholder="E-mail" required>
+                   </div>
+
+                   <div class="section-form">
+                        <label class="visually-hidden" for="telefon">Telefonnummer</label>
+                        <input id="telefon" type="tel" placeholder="Telefonnummer">
+
+                        <label class="visually-hidden" for="region">Vælg region</label>
+                        <select id="region" name="select">
+                            <option value="0" selected="true" disabled>Vælg region</option>
+                            <option value="1">Region Hovedstaden</option>
+                            <option value="2">Region Sjælland</option>
+                            <option value="3">Region Syddanmark</option>
+                            <option value="4">Region Midtjylland</option>
+                            <option value="5">Region Nordjylland</option>
+                        </select>
+                   </div>
+
+                   <div class="section-form">
+                    <label class="visusally-hidden" for="besked">Besked</label>
+                    <textarea placeholder="Besked" id="besked" rows="8"></textarea>
+                   </div>
+
+                   <div class="section-form">
+                    <input type="submit" name="submit" value="Send Besked">
+                   </div>
+                </form>
+            </section>
         </main>
 
+        <!--Footer-->
+        <footer>
+            <section class="footer-left">
+                <h4>Info</h4>
+                <p>Banding.Co</p>
+                <p>Kassedammen 1</p>
+                <p>6780 Sønderby</p>
+                <p>Tlf.: <a href="tel:12232312">12 23 23 12</a></p>
+                <p>CVR: 3454 2454</p>
+            </section>
+
+            <div class="footer-right">
+                <img class="logo-footer" src="img/logo-gron.png" alt="">
+            </div>
+        </footer>
+
+        <!--Footer bund-->
+        <footer>
+            <p>Banding.Co</p>
+        </footer>
     </div> 
 </body>
 </html>
